[project]
name = "terapeakscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attr==0.3.2",
    "pillow==11.2.1",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.3",
    "selenium==4.32.0",
    "webdriver-manager==4.0.2",
    "xlsxwriter==3.2.2",
]
